<resources>
    <string name="app_name">Pamther</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pamther</string>
    <string name="nav_header_subtitle">usuario@correo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_standard">Standards</string>
    <string name="menu_booklets">Booklets</string>
    <string name="filename">Filename:</string>
    <string name="campo_uno">Campo Uno</string>
    <string name="campo_dos">Campo Dos</string>
    <string name="campo_tres">Campo Tres</string>
    <string name="campo_cuatro">Campo Cuatro</string>
</resources>